--- a/进度.md
+++ b/进度.md
@@ -3,8 +3,8 @@
 	1. 参照网上方法，爬取页面所有超链接+对应页面； ok
    		· beautifulsoap4版 ok
    	2. 修改：支持本地页面（.html格式）的超链接提取；
-   		· Python文件读写 in_process(1/3: demo ok, function, run)
-   		· html入门
+   		· Python文件读写 ok
+   		· html入门 ok
    		! issue描述：本地html在联网时，加载不出；断网却可以。
    		· update onto Github (due 0805)
    	3. 重构：使用selenium + ChromeDriver
