0805 添加功能：生成下载页面的目录; 修复一个小问题
添加功能：生成下载页面的目录；
修复问题：解决了本地页面加载过慢的问题

--- a/进度.md
+++ b/进度.md
@@ -2,12 +2,17 @@
 1. Python爬虫1：爬取某博客(computational fairy tales)的所有文章
 	1. 参照网上方法，爬取页面所有超链接+对应页面； ok
    		· beautifulsoap4版 ok
-   	2. 修改：支持本地页面（.html格式）的超链接提取；
+   	2. 修改：支持本地页面（.html格式）的超链接提取；生成下载页面的目录；ok
    		· Python文件读写 ok
    		· html入门 ok
-   		! issue描述：本地html在联网时，加载不出；断网却可以。
-   		· update onto Github (due 0805)
+   		· issue描述：本地html在联网时，加载不出；断网却可以[1] fix[2]
+   		· update onto Github (due 0805) ok
    	3. 重构：使用selenium + ChromeDriver
    		· update onto Github (due 0806)
 2. Python爬虫2：登入网页 (due 0810)
 	· 登录框的锁定
+
+
+
+[1] 推测应该是某些渲染；https://jingyan.baidu.com/article/6dad5075f64679a123e36e39.html;    
+[2] 页面内容应该还可以继续删，目前影响不大。
