--- a/进度.md
+++ b/进度.md
@@ -5,8 +5,11 @@
    	2. 修改：支持本地页面（.html格式）的超链接提取；生成下载页面的目录；ok
    		· Python文件读写 ok
    		· html入门 ok
-   		· issue描述：本地html在联网时，加载不出；断网却可以[1] fix[2]
-   		· update onto Github (due 0805) ok
+   		· issue描述：本地html在联网时，加载不出；断网却可以[1] re
+   	  		- 通过删去不必要的内容，正文内容不涉及图片的页面已可以快速加载 ok
+   			- 问题原因推测：页面部分内容需要网络加载——比如图片等（在request.get时只取得了text）。
+   			- 测试用例：29.html(Linked Lists, Kindergarten, and Ocean Voyages)
+   		· update onto Github 
    	3. 重构：使用selenium + ChromeDriver
    		· update onto Github (due 0806)
 2. Python爬虫2：登入网页 (due 0810)
