--- a/进度.md
+++ b/进度.md
@@ -9,12 +9,15 @@
    	  		- 通过删去不必要的内容，正文内容不涉及图片的页面已可以快速加载 ok
    			- 问题原因推测：页面部分内容需要网络加载——比如图片等（在request.get时只取得了text）。
    			- 测试用例：29.html(Linked Lists, Kindergarten, and Ocean Voyages)
+   			- 图片需要额外的请求啊... 琢磨一下request库
    		· update onto Github 
-   	3. 重构：使用selenium + ChromeDriver
-   		· update onto Github (due 0806)
-2. Python爬虫2：登入网页 (due 0810)
-	· 登录框的锁定
-
+   	3. 重构：使用selenium + ChromeDriver x不合适，无必要
+2. Python爬虫2：登入网页 ok
+	· 登录框的锁定 ok
+3. 抓包
+	· 安装Charles ok
+	· 配置Charles SSL等
+4. Python爬虫3：漫画下载
 
 
 [1] 推测应该是某些渲染；https://jingyan.baidu.com/article/6dad5075f64679a123e36e39.html;    
