--- a/进度.md
+++ b/进度.md
@@ -19,6 +19,10 @@
 	· 配置Charles SSL等
 4. Python爬虫3：漫画下载
 
+* 额外：
+	* 一个方便写日记的html
+  		* 能支持仅在本地工作吗？
+  		* 设计参考tumblr/csfairytale/... 或者使用blogspot？
 
 [1] 推测应该是某些渲染；https://jingyan.baidu.com/article/6dad5075f64679a123e36e39.html;    
 [2] 页面内容应该还可以继续删，目前影响不大。
